-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.1, Lustre 2.5.0, Lustre 2.6.0
-
3
-
11437
The DSL Pool Configuration lock should be held when calling dsl_prop_register().
See comments here:
https://github.com/zfsonlinux/zfs/blob/master/module/zfs/dsl_pool.c#L947
and assertion here:
https://github.com/zfsonlinux/zfs/blob/master/module/zfs/dsl_prop.c#L238
Therefore osd_zfs will panic on mount if using a debug build of ZFS.