lustre/osd-zfs/osd_internal.h
@@ -506,4 +506,16 @@ static inline uint32_t attrs_zfs2fs(const uint64_t flags)
 }
 
 #endif
+
+#ifndef HAVE_DSL_POOL_CONFIG
+static inline void dsl_pool_config_enter(dsl_pool_t *dp, char *name)
+{
+}
+
+static inline void dsl_pool_config_exit(dsl_pool_t *dp, char *name)
+{
+}
+
+#endif
+
 #endif /* _OSD_INTERNAL_H */
